more code changes

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 
 		<div class="answers">
 			<div>
-				<button class="btn btn-primary btn-lg" class="answerchoice" id="button0"><h4>A</h4></button>
+				<button class="btn btn-primary btn-lg" class="answerchoice" id="button0"><h4></h4></button>
 			</div>
 			<div>
-				<button class="btn btn-primary btn-lg" class="answerchoice" id="button1"><h4>B</h4></button>
+				<button class="btn btn-primary btn-lg" class="answerchoice" id="button1"><h4></h4></button>
 			</div>
 			<div>
-				<button class="btn btn-primary btn-lg" class="answerchoice" id="button2"><h4>C</h4></button>
+				<button class="btn btn-primary btn-lg" class="answerchoice" id="button2"><h4></h4></button>
 			</div>
 			<div>
-				<button class="btn btn-primary btn-lg" class="answerchoice" id="button3"><h4>D</h4></button>
+				<button class="btn btn-primary btn-lg" class="answerchoice" id="button3"><h4></h4></button>
 			</div>
 		</div>
 		
