--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<h3 class="panel-title">Time Remaining:</h3>		
 					</div>
 					<div class="panel-body">
-						<h2><span id="countdownTimer">9 3/4 </span></h2>
+						<h2><span id="countdownTimer">00:09:75</span></h2>
 					</div>
 				</div>
 			</div>
